--- a/assets/css/stil.css
+++ b/assets/css/stil.css
@@ -34,13 +34,22 @@ textarea{
 }
 
 
-.dialogForm{
+.dialog-form{
     margin: 50px auto;
     border-radius: 15px;
     border: none;
+    background-color: rgb(206, 176, 176);
+
 }
 ::backdrop{
     background-color: rgb(0, 0, 0, 0.5);
+}
+
+.close-dialog{
+    padding: 5px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 
